# survey_tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aomap/: README-asterisms.md  aomap.py  build.py  config.yaml  create-maps.py  example-match-asterisms.ipynb  export-asterisms.py  export-euclid-poly.py  export-ews-poly.py  plot-GNAO-maps.ipynb  plot-asterims.ipynb  plot-gaia-maps.ipynb  plot-maps.ipynb  test-asterisms.ipynb  test-build.ipynb  test-config.yaml  test-create-maps.ipynb  test-plot-maps.ipynb  todo.md
aosim/: GIRMOS.ini  LGSAO.ini  install-tiptop-cupy.sh  plot-grids.ipynb  plot-sims.ipynb  run-sims.py  simulate.py  stats.py  tessellate.py  test-tessellate.ipynb  test-tiptop.ipynb
create/: create-3DHST-PLUS.py  create-UVISTA-PLUS.py  create.py  test-create-3DHST-PLUS.ipynb  test-create-UVISTA-PLUS.ipynb
data/: README.txt
data/indexes/: 3D-HST-AEGIS_ACS_V4.1.5.txt  3D-HST-COSMOS_ACS_V4.1.5.txt  3D-HST-GOODSN_ACS_V4.1.5.txt  3D-HST-GOODSS_ACS_V4.1.5.txt  3D-HST-UDS_ACS_V4.1.5.txt
examples/: healpix.ipynb  match-3DHST.ipynb  match-UVISTA.ipynb  ngs.ipynb  read-DESI.ipynb  read-catalog.ipynb  sky.ipynb  stars.ipynb
match/: create-3DHST-PLUS.py
scripts/: rename-LEGAC-spectra.sh
survey_tools/: __init__.py  asterism.py  catalog.py  gaia.py  healpix.py  match.py  sky.py
survey_tools/utility/: __init__.py  files.py  fit.py  plot.py  rotator.py  table.py
targets/: example-append.py  example-plan-obs.ipynb  example-target-info.ipynb  targets.py  test-append.ipynb  todo.md
